--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.3",
+    "@astropub/icons": "^0.2.0",
     "astro": "^5.0.1",
     "tailwindcss": "^3.4.16",
     "three": "^0.171.0"
